Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1011

Error generating package imports when using classes from other packages

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.1, 0.2, 0.3, 0.4, 0.5
    • 0.7
    • AS3 - Compiler
    • None
    • All Environments

    • Patch Available

    Description

      If you define multiple thrift files and use a data type from one file in another the generated code is broken because it tries to use the fully qualified class name as object type without adding an import call. While this works in java it does not work in as3.

      For example, if we have a file types.thrift

      ******types.thrift***********
      namespace com.xxx.xxx.types

      struct Type1 {
      1: string param1,
      }

      ********************************

      and a file service.thrift

      **********service.thrift*********
      namespace com.xxx.xxx.services

      include "types.thrift"
      service Service1 {
      void method (1:types.Type1 object),
      }
      ********************************

      This will generate a method definition like

      public function method(object:com.xxx.xxx.types.Type1, onError:Function, onSuccess:Function):void

      but will not generate the import
      import :com.xxx.xxx.types.Type1;

      Attachments

        1. service.thrift
          0.1 kB
          Rowan Kerr
        2. thrift_1039194_e21ec8f84f339cbb0c5f.patch
          13 kB
          Usman Ismail
        3. types.thrift
          0.1 kB
          Rowan Kerr

        Activity

          People

            usmanismail Usman Ismail
            usmanismail Usman Ismail
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: